--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
         <div class="black-turn-text mobile">
             Blacks turn
         </div>
+      <footer>
+        Designed & Developed by Mobinul with 💗
+      </footer>
     </main>
 </body>
 </html>
